Spring cleaning